fix: Add task and add project dialogs weren't showing on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -952,14 +952,14 @@ a {
 
 #addTaskDialog,
 #addProjectDialog {
+  width: 80%;
+  margin: 5em auto;
   width: clamp(300px, 80%, 475px);
-  /* width: 50%; */
-  /* margin: 5em auto; */
   min-width: max-content;
   padding: 0;
   border: none;
   border-radius: 10px; 
-  /* isolation: isolate; */
+  isolation: isolate;
   animation: .3s cubic-bezier(.4,0,.2,1) modal-dialog;
   max-width: 100%;
   transition: width .2s ease-in-out, box-shadow .5s;
@@ -1233,7 +1233,7 @@ h1.form-header-text {
   border: var(--sidebar-item-hover);
   padding: 0 0.8em;
   color: rgb(72, 72, 72);
-  font-size: 0.85rem;
+  font-size: 0.95rem;
 }
 
 .add-project-button:hover {
